--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -7,7 +7,7 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Firstpage of beautify.me</h1>
+        <h1>Accessories</h1>
        <p>welcome!</p>
       </div>
 
