--- a/app/views/navBar.html
+++ b/app/views/navBar.html
@@ -6,34 +6,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Beautify.Me</a>
+          <a class="brand" href="#">beautify.me</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#start">Start</a></li>
-              <li class="dropdown"><a href="#accessory" class="dropdown-toggle" data-toogle="dropdown">Accessory </a>
-              <ul class="dropdown-menu">
-              	<li><a href="#all">All</a></li>
-              	<li class="divider"></li>
-              	<li><a href="#hats">Hats</a></li>
-              	<li class="divider"></li>
-              	<li><a href="#glasses">Glasses</a>
-              </ul>
-              
+              <li class="active"><a href="/">Start</a></li>
+              <li class="dropdown"><a href="accessories" class="dropdown-toggle" data-toogle="dropdown">Accessories </a>              
               </li>
-              <li><a href="#top20">Top20</a></li>
-              <li><a href="#myStuff">MyStuff</a>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+              <li><a href="top">Top20</a></li>
+              <li><a href="mystuff">MyStuff</a>
             </ul>
             <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
