sticky footer with links, dummy camera image

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,15 +2,5 @@
 #{set title:'beautify.me - Welcome!' /}
     <div class="container">
 
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Welcome</h1>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-
+	<img  src="@{'/public/images/girl.jpg'}">
     </div> <!-- /container -->
