--- a/app/views/navBar.html
+++ b/app/views/navBar.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">beautify.me</a>
+          <a class="brand" href="/">beautify.me</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="/">Start</a></li>
