--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,6 +1,18 @@
 #{extends 'main.html' /}
 #{set title:'beautify.me - Welcome!' /}
     <div class="container">
-
-	<img  src="@{'/public/images/girl.jpg'}">
+	   
+	    <div class="span12">
+	     <div class="row">
+		    <div class="span8">
+		    	<div class="row">
+		    		<div class="span7 offset1"><img src="@{'/public/images/girl.jpg'}"  class="img-polaroid"></div>
+				</div><!-- /row -->				
+			    <div class="row">		    		
+		    		<div class="span7 offset1"><img src="@{'/public/images/dummyhats.jpg'}"></div>
+				</div><!-- /row -->
+			</div><!-- /span8 -->
+			<div class="span4"><img src="@{'/public/images/side.png'}"></div>
+			</div> <!-- /span12 -->
+		</div><!-- /row -->
     </div> <!-- /container -->
