--- a/app/views/main.html
+++ b/app/views/main.html
@@ -44,6 +44,27 @@
           padding-right: 20px;
         }
       }
+      
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+
+      #wrap > .container {
+        padding-top: 60px;
+      }
+      .container .credit {
+        margin: 20px 0;
+      }
+
+      code {
+        font-size: 80%;
+      }
+      
+      .center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+}
 
     </style>
         #{get 'moreStyles' /}
