Terms of use, privacy and about text added

--- a/app/views/Application/about.html
+++ b/app/views/Application/about.html
@@ -1,11 +1,11 @@
 #{extends 'main.html' /}
-#{set title:'beautify.me - Welcome!' /}
+#{set title:'beautify.me - About us' /}
 
 
 
     <div class="container">
-
-      <div class="hero-unit">
-        <h1>About us</h1>
-      </div>
+	<div class="page-header">
+		<h1>About us</h1>
+	</div>
+	<p class="lead">We are beutify.me. If you want to contact us, use the form on this page.</p>
     </div> <!-- /container -->
