--- a/app/views/Application/mystuff.html
+++ b/app/views/Application/mystuff.html
@@ -4,11 +4,8 @@
 
 
     <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>My stuff</h1>
-       <p>welcome!</p>
+      <div class="page-header">
+        <h3>My stuff</h3>
       </div>
     </div> <!-- /container -->
 
