--- a/app/views/Application/top.html
+++ b/app/views/Application/top.html
@@ -4,10 +4,7 @@
 
 
     <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Top accessories</h1>
-       <p>welcome!</p>
+      <div class="page-header">
+        <h3>Top accessories</h3>
       </div>
     </div> <!-- /container -->
