--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -21,7 +21,7 @@
 		     #{/if}
             	<td>
                 <div class="accessory">
-                        <a href="#"><img src="@{Application.getPic(accessory.id)}"/></a>
+                        <a href="#"><img height="100" width="100" src="@{Application.getPic(accessory.id)}"/></a>
                          *{<div class="span1" >${accessory.articleName}  by  ${accessory.provider.name}</div>}*
 				</div>
 				</td>
