--- a/app/views/Application/registration.html
+++ b/app/views/Application/registration.html
@@ -17,7 +17,7 @@
 	</div>
 	#{/ifErrors}
 	
-	#{form @Registration.handleSubmit()}
+	#{form @registrationFinish()}
 	
 	<fieldset>              
         <legend>User informations</legend>  
@@ -95,7 +95,7 @@
         
     </fieldset>             
     
-	<input type="submit" class="submit" value="&{'registration.register'}" />
+	<input type="submit" class="submit" value="&{'Join!'}" />
 	
 	#{/form}
 	
