latest version of the registration complete screen

--- a/app/views/Application/registrationFinish.html
+++ b/app/views/Application/registrationFinish.html
@@ -12,7 +12,10 @@
 <p>
 	<strong>Email</strong> is ${user.email}
 </p>
-
+<p>
+	<strong>USER_ID</strong> is  ${session.get("userID")}
+</p>
 #{a @Application.index()}Back#{/a}
+
 
 </div>
