added a signin page

--- a/app/views/navBar.html
+++ b/app/views/navBar.html
@@ -1,3 +1,4 @@
+
  <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -14,12 +15,14 @@
               </li>
               <li><a href="top">Top20</a></li>
               <li><a href="mystuff">MyStuff</a>
+              
+              #{if user} 
+                Welcome @{Users.getUserNameFromSession()}! 
+                <li><a href="logout">Logout</a> #{/if} 
+              #{else}
+                <li><a href="signin">Sign In</a>
+                <li><a href="registration">Register</a> #{/else}
             </ul>
-            <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
-              <input class="span2" type="password" placeholder="Password">
-              <button type="submit" class="btn">Sign in</button>
-            </form>
           </div><!--/.nav-collapse -->
         </div>
       </div>
