--- a/app/views/Application/registration.html
+++ b/app/views/Application/registration.html
@@ -8,6 +8,13 @@
 	
 	#{ifErrors}
 	<div class="error">
+	  <h2>Oops, please correct these errors</h2>
+	</div>
+	#{/ifErrors}
+	
+	
+	*{#{ifErrors}
+	<div class="error">
     <h2>Oops, please correct these errors</h2>
     <ul>
         #{errors}
@@ -15,7 +22,7 @@
         #{/errors}
     </ul>
 	</div>
-	#{/ifErrors}
+	#{/ifErrors}}*
 	
 	#{form @registrationFinish()}
 	
