added captcha to the registration process

--- a/app/views/Application/registration.html
+++ b/app/views/Application/registration.html
@@ -102,6 +102,11 @@
         
     </fieldset>             
     
+
+	<fieldset>  
+	<p>#{ugot.recaptcha theme:"red", tabindex:"2"/}</p>
+	 </fieldset>  
+	
 	<input type="submit" class="submit" value="&{'Join!'}" />
 	
 	#{/form}
