fixed session problem, user is now a global variable in the view and can be reached in any view with out passing it from the controller!

--- a/app/views/navBar.html
+++ b/app/views/navBar.html
@@ -15,9 +15,8 @@
               </li>
               <li><a href="top">Top20</a></li>
               <li><a href="mystuff">MyStuff</a>
-              
               #{if user} 
-                Welcome @{Users.getUserNameFromSession()}! 
+                Welcome ${user}! 
                 <li><a href="logout">Logout</a> #{/if} 
               #{else}
                 <li><a href="signin">Sign In</a>
