--- a/app/views/navBar.html
+++ b/app/views/navBar.html
@@ -10,14 +10,14 @@
           <a class="brand" href="/">beautify.me</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/">Start</a></li>
-              <li class="dropdown"><a href="accessories" class="dropdown-toggle" data-toogle="dropdown">Accessories </a>              
+              <li><a href="/">Start</a></li>
+              <li><a href="@{Application.accessories}">Accessories </a>              
               </li>
-              <li><a href="top">Top20</a></li>
-              <li><a href="mystuff">MyStuff</a> 
+              <li><a href="@{Application.top}">Top20</a></li>
+              <li><a href="@{Application.mystuff}">MyStuff</a> 
               #{if user} 
-                Welcome ${user}! 
-                <li><a href="logout">Logout</a> #{/if} 
+                <li>Logged in as ${user}!</li> 
+                <li><a href="@{Registration.signout}">Logout</a> #{/if} 
               #{else}
                 <li><a href="signin">Sign In</a>
                 <li><a href="registration">Register</a> #{/else}
