--- a/app/views/Application/user.html
+++ b/app/views/Application/user.html
@@ -4,10 +4,9 @@
 
 
     <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>My user page</h1>
-       <p>welcome!</p>
-      </div>
+      <div class="page-header">
+        <h3>About ${user}</h3>
+       </div>
+        <p>Name: ${user.name} ${user.lastName}</p>
+        <p>Email: ${user.email}</p>
     </div> <!-- /container -->
