--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -2,9 +2,9 @@
         <div class="container">
           <div class="nav-collapse pull-right">
             <ul class="nav">
-              <li><a href="termsofuse">Terms of use </a> </li>
-              <li><a href="privacy">Privacy policy</a></li>
-              <li><a href="about">About us</a>
+              <li><a href="@{Application.termsofuse}">Terms of use </a> </li>
+              <li><a href="@{Application.privacy}">Privacy policy</a></li>
+              <li><a href="@{Application.about}">About us</a>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
