--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,11 +1,9 @@
- <div class="navbar">
-        <div class="container">
-          <div class="nav-collapse pull-right">
-            <ul class="nav">
-              <li><a href="@{Application.termsofuse}">Terms of use </a> </li>
-              <li><a href="@{Application.privacy}">Privacy policy</a></li>
-              <li><a href="@{Application.about}">About us</a>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+<div id="footer">
+    <div id="footer-inner">
+        <ul class="navigation">
+            <li><a href="@{Application.termsofuse}">Terms of use </a></li>
+            <li><a href="@{Application.privacy}">Privacy policy</a></li>
+            <li><a href="@{Application.about}">About us</a>
+        </ul>
     </div>
+</div>
