--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,35 +1,25 @@
 #{extends 'main.html' /}
-#{set title:'Home' /}
-
-<div class="span12 columns">
-    <div class="page-header">
-        <h2><img src="${user.avatarUrl}" width="40px" height="40px"/> Welcome ${user.displayName}</h2>
-    </div>
-
-    <div class="clearfix">
-        <h2>User details</h2>
-        User id: ${user.id.id}<br>
-        Logged in from: ${user.id.provider}<br>
-        Email: ${user.email}<br>
-        Authentication method: ${user.authMethod}
-
-        #{if user.authMethod == securesocial.provider.AuthenticationMethod.OAUTH1 ||
-              user.authMethod == securesocial.provider.AuthenticationMethod.OPENID_OAUTH_HYBRID}
-        <h2>OAuth 1</h2>
-        Token = ${user.token}<br>
-        Secret = ${user.secret}
-        #{/if}
-
-        #{if user.authMethod == securesocial.provider.AuthenticationMethod.OAUTH2}
-        <h2>OAuth 2</h2>
-        Access token = ${user.accessToken}
-        #{/if}
-    </div>
-
-    <div class="well" style="margin-top: 15px;">
-        <a href="@{Application.logout}" class="btn primary ">Logout</a>
-    </div>
-</div>
-        
-
-
+#{set title:'beautify.me - Welcome!' /}
+    <div class="container">
+	   
+	    <div class="span12">
+	     <div class="row">
+		    <div class="span8">
+		    	<div class="row">
+		    		<div class="span7 offset1"><img src="@{'/public/images/girl.jpg'}"  class="img-polaroid"></div>
+				</div><!-- /row -->				
+			    <div class="row">		    		
+		    		<div class="span7 offset1">
+		    		<!---Dummy code takes hats form database and displayes them -->
+		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(1)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(10)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(20)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(40)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(50)}"/></a>
+		    		</div>
+				</div><!-- /row -->
+			</div><!-- /span8 -->
+			<div class="span4"><img src="@{'/public/images/side.png'}"></div>
+			</div> <!-- /span12 -->
+		</div><!-- /row -->
+    </div> <!-- /container -->
