--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,27 +4,87 @@
     <head>
         <title>#{get 'title' /}</title>
         <meta charset="${_response_encoding}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap-1.3.0/bootstrap.min.css'}">
+        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+		<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap.css'}">
+		<link rel="stylesheet" media="screen" href="@{'/public/stylesheets/bootstrap.min.css'}">
+		   <style type="text/css">
+
+      /* Sticky footer styles
+      -------------------------------------------------- */
+      html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -40px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 40px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+      
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+
+      #wrap > .container {
+        padding-top: 60px;
+      }
+      .container .credit {
+        margin: 20px 0;
+      }
+
+      code {
+        font-size: 80%;
+      }
+      
+      .center {
+     float: none;
+     margin-left: auto;
+     margin-right: auto;
+}
+
+    </style>
         #{get 'moreStyles' /}
+        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+		<script src="@{'/public/javascripts/bootstrap.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         #{get 'moreScripts' /}
     </head>
     <body>
-        <div class="topbar">
-            <div class="fill">
-                <div class="container">
-                    <h3><a href="@{Application.login()}">SecureSocial Module</a></h3>
-                    
-                </div>
-            </div>
-        </div>
-        <div class="container" style="padding-top:50px;">
-            <div class="row">
-                <div class="span10 columns offset2">
-                    #{doLayout /}
-                </div>
-            </div>
-        </div>
-
+    <div id="wrap">
+    	#{include 'navBar.html' /}
+        #{doLayout /}
+        
+      <div id="push"></div>
+    </div>
+    <div id="footer">
+      <div class="container">
+       #{include 'footer.html' /}
+      </div>
+    </div>
+    </div>
     </body>
 </html>
