--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -11,11 +11,11 @@
 			    <div class="row">		    		
 		    		<div class="span7 offset1">
 		    		<!---Dummy code takes hats form database and displayes them -->
-		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(1)}"/></a>
-		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(10)}"/></a>
-		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(20)}"/></a>
-		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(40)}"/></a>
-		    		<a href="#"><img height="100" width="100" src="@{Application.getPic(50)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getAccessory(1)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getAccessory(10)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getAccessory(20)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getAccessory(40)}"/></a>
+		    		<a href="#"><img height="100" width="100" src="@{Application.getAccessory(50)}"/></a>
 		    		</div>
 				</div><!-- /row -->
 			</div><!-- /span8 -->
