--- a/app/views/PasswordChangeController/changePassword.html
+++ b/app/views/PasswordChangeController/changePassword.html
@@ -1,4 +1,4 @@
-#{extends 'securesocial/SecureSocial/main.html'/}
+#{extends 'main.html' /}
 #{set title: messages.get('securesocial.changeTitle') /}
 
 <div class="container">
