--- a/app/views/noticePage.html
+++ b/app/views/noticePage.html
@@ -1,6 +1,8 @@
-#{extends '/main.html'/}
+#{extends 'main.html' /}
+#{set title:'beautify.me - Activate' /}
 
-<div class="span12 columns">
+<!-- <div class="span12 columns"> -->
+<div class="container">
     <div class="page-header">
         <h1>${title}</h1>
     </div>
