--- a/app/views/UsernamePasswordController/signup.html
+++ b/app/views/UsernamePasswordController/signup.html
@@ -1,4 +1,4 @@
-#{extends 'main.html'/}
+#{extends 'main.html' /}
 #{set title: messages.get('securesocial.signUpTitle') /}
 
 <div class="container">
@@ -21,27 +21,27 @@
             <fieldset>
 			<legend>&{'securesocial.signUpUserInfoLabel'}</legend>
 
-                <div class="clearfix #{ifError 'displayName'} error #{/ifError}">
-                    <label for="displayName">&{'securesocial.name'}</label>
+                <div class="clearfix #{ifError 'name'} error #{/ifError}">
+                    <label for="name">&{'securesocial.name'}</label>
                     <div class="field">
-                        <input id="displayName" type="text" class="large" name="displayName" value="${flash.displayName}"/>
-                        #{ifError 'displayName'}
+                        <input id="name" type="text" class="large" name="name" value="${flash.name}"/>
+                        #{ifError 'name'}
                         <span class="help-inline">&{'securesocial.required'}</span>
                         #{/ifError}
                     </div>
                 </div>
 
-                <div class="clearfix #{ifError 'displayLastName'} error #{/ifError}">
-                    <label for="displayLastName">&{'securesocial.lastName'}</label>
+                <div class="clearfix #{ifError 'lastName'} error #{/ifError}">
+                    <label for="lastName">&{'securesocial.lastName'}</label>
                     <div class="field">
-                        <input id="displayLastName" type="text" class="large" name="displayLastName" value="${flash.displayLastName}"/>
-                        #{ifError 'displayLastName'}
+                        <input id="lastName" type="text" class="large" name="lastName" value="${flash.lastName}"/>
+                        #{ifError 'lastName'}
                         <span class="help-inline">&{'securesocial.required'}</span>
                         #{/ifError}
                     </div>
                 </div>
                 
-                <div class="clearfix #{ifError 'age'} error #{/ifError}">
+               <!-- <div class="clearfix #{ifError 'age'} error #{/ifError}">
                     <label for="age">&{'securesocial.age'}</label>
                     <div class="field">
                         <input id="age" type="text" class="large" name="age" value="${flash.age}"/>
@@ -49,7 +49,7 @@
                         <span class="help-inline">&{'securesocial.required'}</span>
                         #{/ifError}
                     </div>
-                </div>
+                </div> -->
                 
 				<div class="clearfix #{ifError 'gender'} error #{/ifError}">
                     <label for="gender">&{'securesocial.gender'}</label>
@@ -96,7 +96,7 @@
                 <div class="clearfix #{ifError 'password'} error #{/ifError}">
                     <label for="password">&{'securesocial.password'}</label>
                     <div class="field">
-                        <input id="password" type="text" class="large" name="password" type="password"/>
+                        <input id="password" class="large" name="password" type="password"/>
                         #{ifError 'password'}
                         <span class="help-inline">&{'securesocial.required'}</span>
                         #{/ifError}
@@ -106,7 +106,7 @@
                  <div class="clearfix #{ifError 'password2'} error #{/ifError}">
                     <label for="password2">&{'securesocial.password2'}</label>
                     <div class="field">
-                        <input id="password2" type="text" class="large" name="password2" type="password"/>
+                        <input id="password2" class="large" name="password2" type="password"/>
                         #{ifError 'password2'}
                         <span class="help-inline">#{error 'password2'/}</span>
                         #{/ifError}
@@ -118,9 +118,13 @@
 			<fieldset>
 			    <legend>&{'securesocial.signUpConditionsLabel'}</legend>
 			    <div class="field"> 
-			        <label for="termsOfUse">I accept terms of use : </label>
-			        <input id="termsOfUse" type="checkbox" value="true" name="termsOfUse" #{if params.termsOfUse}checked="true"#{/if}  class="#{errorClass 'termsOfUse' /}" />
-			        <span class="error">#{ifError 'termsOfUse'}Please accept terms of use#{/ifError}</span>
+			        <!-- <label for="termsOfUse">I accept terms of use : </label>-->
+			        <input id="termsOfUse" type="checkbox" value="true" name="termsOfUse" #{if params.termsOfUse}checked="true"#{/if}  class="#{errorClass 'termsOfUse' /}"> I accept terms of use </input>
+			        <span class="error">
+			        #{ifError 'termsOfUse'}
+                        <span class="help-inline">&{'securesocial.acceptTermsOfUse'}</span>
+					#{/ifError}
+			        </span>
 			    </div>			   
 			    
 			    <div class="infos">
