--- a/app/views/Application/top.html
+++ b/app/views/Application/top.html
@@ -1,10 +1,30 @@
 #{extends 'main.html' /}
 #{set title:'beautify.me - Welcome!' /}
 
-
+	<style>
+	
+	div.span2{
+		padding-bottom: 20px;
+	}
+	
+	</style>
 
     <div class="container">
       <div class="page-header">
-        <h3>Top accessories</h3>
+        <h3>Top20 accessories</h3>
       </div>
+      
+      <div class="row">
+      	<div class="span12">
+      		#{list items:accessories, as:'accessory'}
+      		<div class="span2">
+      			<div class="accessory">
+                    <a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
+                    <div class="span2">Likes: ${accessory.likes}</div>
+				</div>
+		</div>
+		   	#{/list}
+		</div>
+      </div>
+   
     </div> <!-- /container -->
