--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,6 +1,11 @@
 #{extends 'main.html' /}
 #{set title:'beautify.me - Welcome!' /}
 
+#{set 'moreStyles'}
+<link rel="stylesheet" media="screen" href="http://smoothdivscroll.com/css/smoothDivScroll.css"/>
+    #{stylesheet 'scroller.css'/}
+#{/set}
+
 <div id="media">
     <video autoplay id="v" style="width:800px; height:700px; display: none"></video>
     <div id="container"></div>
@@ -16,12 +21,31 @@
 
 
 <div id="items">
-#{list items:accessoryList, as:'accessory'}
+    <div id="makeMeScrollable">
+    #{list items:accessoryList, as:'accessory'}
 
-    <a href="#"><img height="100" width="100" src="@{Accessories.getPic(accessory.id)}"/></a>
+        <a href="#"><img height="100" width="100" src="@{Accessories.getPic(accessory.id)}"/></a>
 
-#{/list}
+    #{/list}
+    </div>
 </div>
+
+<script src="http://smoothdivscroll.com/js/jquery-ui-1.8.23.custom.min.js" type="text/javascript"></script>
+
+<script src="http://smoothdivscroll.com/js/jquery.mousewheel.min.js" type="text/javascript"></script>
+
+
+<script src="http://smoothdivscroll.com/js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
+
+
+<script type="text/javascript">
+    // Initialize the plugin with no custom options
+    $(document).ready(function () {
+        // None of the options are set
+        $("div#makeMeScrollable").smoothDivScroll({});
+    });
+</script>
+
 
 <script src="@{'/public/javascripts/kinetic-v4.5.4.min.js'}"></script>
 <script src="@{'/public/javascripts/main.js'}"></script>
