--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,8 +3,8 @@ body {
 }
 
 #content {
-    width: 900px;
-    margin: 20px auto;
+    width: 70%;
+    margin: 20px auto 80px;
 }
 
 #header {
@@ -46,11 +46,20 @@ a#logo {
 }
 
 #footer {
-    width: 100%;
-    height: 60px;
     font-size: 16px;
-    background-color: #f5f5f5;
+    /*height: 60px;*/
+    /*bottom: 0;*/
+    position: relative;
+    margin: 20px auto 0px;
+    width: 100%;
     float: left;
+    /**/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 60px;*/
+    /*font-size: 16px;*/
+    background-color: #f5f5f5;
+    /*bottom: 0;*/
 }
 
 #footer-inner {
@@ -82,6 +91,7 @@ a#logo {
     margin: 15px auto;
     width: 100%;
     float: left;
+
 }
 
 #go {
