--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -31,8 +31,8 @@
 		     #{/if}
             	<td>
                 <div class="accessory">
-                       	<input type="image" style=position:absolute src="#"; height="20" width="20" name="imgLike" value="like">
-    					<input type="image" style=position:absolute src="#" height="20" width="20" name="imgDislike" value="dislike">
+                       	<input type="image" style=position:absolute src="@{'/public/images/plus.gif'}"; height="20" width="20" name="imgLike" value="like">
+    					<input type="image" style=position:absolute src="@{'/public/images/minus.gif'}"; height="20" width="20" name="imgDislike" value="dislike">
     					
                         <a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
                          *{<div class="span1" >${accessory.articleName}  by  ${accessory.provider.name}</div>}*
