--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -31,9 +31,14 @@
 		     #{/if}
             	<td>
                 <div class="accessory">
+                #{if session.securesocial_user}
+                #{if controllers.Accessories.doesContain(accessory)}
+                	    <input type="image" style=position:absolute src="@{'/public/images/minus.gif'}"; height="20" width="20" name="imgDislike" value="dislike">
+                #{/if}
+                #{else}       	
                        	<input type="image" style=position:absolute src="@{'/public/images/plus.gif'}"; height="20" width="20" name="imgLike" value="like">
-    					<input type="image" style=position:absolute src="@{'/public/images/minus.gif'}"; height="20" width="20" name="imgDislike" value="dislike">
-    					
+    			#{/else}		
+    	        #{/if}
                         <a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
                          *{<div class="span1" >${accessory.articleName}  by  ${accessory.provider.name}</div>}*
 				</div>
