--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'beautify.me - Welcome!' /}
 
-
+#{stylesheet src:'accessories.css'/}
 
 <div class="container">
 
@@ -33,10 +33,14 @@
                 <div class="accessory">
                 #{if session.securesocial_user}
                 #{if controllers.Accessories.doesContain(accessory)}
-                	    <input type="image" style=position:absolute src="@{'/public/images/minus.gif'}"; height="20" width="20" name="imgDislike" value="dislike">
+                 #{form @Accessories.dislikeAccessory(accessory.id)}
+                	    <input type="image" style=position:absolute src=@{'/public/images/minus.gif'} height="20" width="20" name="imgDislike" value="dislike">
+                 #{/form}
                 #{/if}
-                #{else}       	
-                       	<input type="image" style=position:absolute src="@{'/public/images/plus.gif'}"; height="20" width="20" name="imgLike" value="like">
+                #{else}
+                 #{form @Accessories.likeAccessory(accessory.id)}       	
+                       	<input type="image" style=position:absolute src=@{'/public/images/plus.gif'} height="20" width="20" name="imgLike" value="like">
+    			 #{/form}
     			#{/else}		
     	        #{/if}
                         <a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
