very primitive filtering for camera-accesories. No scrollbar yet!

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -16,7 +16,15 @@
 
     <button id="go">Take a photo!</button>
     <img id="imp" style="display:none;"/>
-    <img src="@{'/public/images/side.png'}"/>
+    Gender:
+    <a href="@{Application.index}?gender=1">female</a>
+    <a href="@{Application.index}?gender=1">male</a>
+    <a href="@{Application.index}?gender=1">unisex</a>
+    
+    Type: 
+    <a href="@{Application.index}?type=12">hat</a>
+    <a href="@{Application.index}?type=13">glasses</a>
+    <a href="@{Application.index}?type=2">earrings</a>
 </div>
 
 
