--- a/app/views/Application/mystuff.html
+++ b/app/views/Application/mystuff.html
@@ -20,8 +20,17 @@
       	<div class="span6">
       		#{list items:useraccessories, as:'accessory'}
       			<div class="span2">
+      			#{if session.securesocial_user}
+                #{if controllers.Accessories.doesContain(accessory)}
+                 #{form @Accessories.dislikeAccessory(accessory.id)}
+                 		<dif class="span2">
+                	    <input type="image" style=position:absolute; src=@{'/public/images/minus.gif'} height="20" width="20" name="imgDislike" value="dislike">
+                 #{/form}
+                #{/if}
+    	        #{/if}
       				<a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
       				${accessory.articleName}  by  ${accessory.provider.name}
+      				</dif>
       			</div>
       		#{/list}
       	</div>
