--- a/app/views/Application/top.html
+++ b/app/views/Application/top.html
@@ -19,6 +19,18 @@
       		#{list items:accessories, as:'accessory'}
       		<div class="span2">
       			<div class="accessory">
+      			#{if session.securesocial_user}
+                #{if controllers.Accessories.doesContain(accessory)}
+                 #{form @Accessories.dislikeAccessory(accessory.id)}
+                	    <input type="image" style=position:absolute src=@{'/public/images/minus.gif'} height="20" width="20" name="imgDislike" value="dislike">
+                 #{/form}
+                #{/if}
+                #{else}
+                 #{form @Accessories.likeAccessory(accessory.id)}       	
+                       	<input type="image" style=position:absolute src=@{'/public/images/plus.gif'} height="20" width="20" name="imgLike" value="like">
+    			 #{/form}
+    			#{/else}		
+    	        #{/if}
                     <a href="#"><img height="100" width="100" src="@{Application.getAccessory(accessory.id)}"/></a>
                     <div class="span2">Likes: ${accessory.likes}</div>
 				</div>
