--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -20,8 +20,8 @@
     <a href="@{Application.index}?gender=1">female</a>
     <a href="@{Application.index}?gender=1">male</a>
     <a href="@{Application.index}?gender=1">unisex</a>
-    
-    Type: 
+
+    Type:
     <a href="@{Application.index}?type=12">hat</a>
     <a href="@{Application.index}?type=13">glasses</a>
     <a href="@{Application.index}?type=2">earrings</a>
@@ -41,13 +41,7 @@
 <script src="http://smoothdivscroll.com/js/jquery-ui-1.8.23.custom.min.js" type="text/javascript"></script>
 <script src="http://smoothdivscroll.com/js/jquery.mousewheel.min.js" type="text/javascript"></script>
 <script src="http://smoothdivscroll.com/js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
-<script type="text/javascript">
-    // Initialize the plugin with no custom options
-    $(document).ready(function () {
-        // None of the options are set
-        $("div#makeMeScrollable").smoothDivScroll({});
-    });
-</script>
+
 
 
 <script src="@{'/public/javascripts/kinetic-v4.5.4.min.js'}"></script>
@@ -65,36 +59,45 @@
 <script src="@{'/public/javascripts/video-stream.js'}"></script>
 <script src="@{'/public/javascripts/canvas-control.js'}"></script>
 <script defer="defer">
+    $(function () {
+//        $("div#makeMeScrollable").smoothDivScroll({});
+        var target = new Kinetic.Image({
+            name: 'video',
+            x: 0,
+            y: 0,
+            width: width,
+            height: height,
+            image: v});
 
-    var target = new Kinetic.Image({
-        name: 'video',
-        x: 0,
-        y: 0,
-        width: width,
-        height: height,
-        image: v});
+        layer.add(target);
+        v.addEventListener('canplay', function (ev) {
+            setTimeout(setVideo, 1000, v, target);
+        }, false);
 
-    layer.add(target);
-    setVideo(v, target);
+        function setVideo(video, target) {
+            try {
+                target.setImage(video);
+                stage.draw();
+                setTimeout(setVideo, 20, video, target);
+            } catch (err) {
+                console.trace();
+                console.log(err);
+            }
+        }
 
-    function setVideo(video, target) {
-        target.setImage(video);
-        stage.draw();
-        setTimeout(setVideo, 20, video, target);
-    }
+        $("#items img").click(function () {
+            loadImage($(this).attr('src'));
+        });
 
-    $("#items img").click(function () {
-        loadImage($(this).attr('src'));
-    });
+        $("#go").click(function () {
 
-    $("#go").click(function () {
+            var canvas = layer.getCanvas().getElement();
+            var dataURL = canvas.toDataURL();
+            document.getElementById('imp').src = dataURL;
 
-        var canvas = layer.getCanvas().getElement();
-        var dataURL = canvas.toDataURL();
-        document.getElementById('imp').src = dataURL;
+            $("#imp").show();
 
-        $("#imp").show();
+        });
 
-    });
-
+    })
 </script>
