--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -2,7 +2,7 @@
 #{set title:'beautify.me - Welcome!' /}
 
 #{set 'moreStyles'}
-<link rel="stylesheet" media="screen" href="http://smoothdivscroll.com/css/smoothDivScroll.css"/>
+    #{stylesheet 'smoothDivScroll.css'/}
     #{stylesheet 'scroller.css'/}
 #{/set}
 
@@ -31,16 +31,15 @@
 <div id="items">
     <div id="makeMeScrollable">
     #{list items:accessoryList, as:'accessory'}
-
         <a href="#"><img height="100" width="100" src="@{Accessories.getPic(accessory.id)}"/></a>
 
     #{/list}
     </div>
 </div>
 
-<script src="http://smoothdivscroll.com/js/jquery-ui-1.8.23.custom.min.js" type="text/javascript"></script>
-<script src="http://smoothdivscroll.com/js/jquery.mousewheel.min.js" type="text/javascript"></script>
-<script src="http://smoothdivscroll.com/js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery-ui-1.8.23.custom.min.js'}" type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery.mousewheel.min.js'}" type="text/javascript"></script>
+<script src="@{'/public/javascripts/jquery.smoothdivscroll-1.3-min.js'}" type="text/javascript"></script>
 
 
 
@@ -60,7 +59,7 @@
 <script src="@{'/public/javascripts/canvas-control.js'}"></script>
 <script defer="defer">
     $(function () {
-//        $("div#makeMeScrollable").smoothDivScroll({});
+        $("div#makeMeScrollable").smoothDivScroll({});
         var target = new Kinetic.Image({
             name: 'video',
             x: 0,
