Fixed admin issues. Sends mail with pic

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -31,7 +31,7 @@
 <div id="items">
     <div id="makeMeScrollable">
     #{list items:accessoryList, as:'accessory'}
-        <a href="#"><img height="100" width="100" src="@{Accessories.getPic(accessory.id)}"/></a>
+        <a href="#"><img height="100" width="100" src="@{AccessoryController.getPic(accessory.id)}"/></a>
 
     #{/list}
     </div>
