--- a/app/views/Application/mystuff.html
+++ b/app/views/Application/mystuff.html
@@ -22,7 +22,7 @@
       			<div class="span2">
       			#{if session.securesocial_user}
                 #{if controllers.AccessoryController.doesContain(accessory)}
-                 #{form @Accessories.dislikeAccessory(accessory.id)}
+                 #{form @AccessoryController.dislikeAccessory(accessory.id)}
                  		<dif class="span2">
                 	    <input type="image" style=position:absolute; src=@{'/public/images/minus.gif'} height="20" width="20" name="imgDislike" value="dislike">
                  #{/form}
