--- a/app/views/Application/accessories.html
+++ b/app/views/Application/accessories.html
@@ -31,7 +31,7 @@
                 <div class="accessory">
                 #{if session.securesocial_user}
                 
-                #{if controllers.AccessoryController.doesContain(Accessory)}
+                #{if controllers.AccessoryController.doesContain(accessory)}
                  #{form @AccessoryController.dislikeAccessory(accessory.id)}
                 	    <input type="image" style=position:absolute src=@{'/public/images/minus.gif'} height="20" width="20" name="imgDislike" value="dislike">
                  #{/form}
